# greedy-string-tiling

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py  test.py
examples/lorem-ipsum/: README.md  main.css  main.py  requirements.txt  template.html  text1.txt
include/: data_generator.hpp  gst.hpp
matchlib/: README.md  celerymain.py  matcher.py  matchers.py  tasks.py  util.py
src/: gst.cpp  gstmodule.cpp
tests/: test_benchmark.cpp  test_matcher.cpp
